# Fluxo_Trifasico_VDI

./: README.md
FP_VDI_TRI/: .cproject  .project  ArquivoSaida0.txt  ArquivoSaida1.txt  ArquivoSaida10.txt  ArquivoSaida11.txt  ArquivoSaida12.txt  ArquivoSaida13.txt  ArquivoSaida14.txt  ArquivoSaida2.txt  ArquivoSaida3.txt  ArquivoSaida4.txt  ArquivoSaida5.txt  ArquivoSaida6.txt  ArquivoSaida7.txt  ArquivoSaida9.txt  Primeira_Vizinhanca.txt  SAIDA_testeConsistencia.dad  barras.dad  barrasFases.dad  barrasTrifasicas.dad  barras_m.dad  chavesCompleto.dad  dadosTrafosTrifasicos.dad  dados_alimentadores.dad  individuo0.dad  matrizImpedanciaCorrente.dad  matrizImpedanciaCorrenteTrifasicos.dad  meson.build  parametros.dad  rnpsetores.dad  run.bat  warnings.txt
FP_VDI_TRI/Debug/: AEMO_DOC_VF  makefile
FP_VDI_TRI/Debug/src/: AEMO_DOC_VF.d  funcoesChaveamento.d  funcoesHeuristica.d  funcoesProblema.d  funcoesRNP.d  subdir.mk
FP_VDI_TRI/Entradas MRAN/: barras.dad  barrasIsoladas.dad  barras_m.dad  grafosetores.dad  individuo0.dad
FP_VDI_TRI/IEEE_4_Barras/: chaves.dad  dadosTrafo.dad  dados_alimentadores.dad  grafosetores.dad
FP_VDI_TRI/Kagan/: barrasTrifasicas.dad  chaves.dad  dadosTrafo.dad  matrizImpedanciaCorrenteTrifasicos.dad
FP_VDI_TRI/Modelos/IEEE_4_Barras/: barrasTrifasicas.dad  individuo0.dad  parametros.dad
FP_VDI_TRI/Modelos/Kagan/: barras.dad  barrasIsoladas.dad  chavesCompleto.dad  chaves_amontante.dad  dados_capacitor.dad  dados_reguladores_tensao.dad  grafosetores.dad  individuo0.dad  matrizImpedanciaCorrente.dad
FP_VDI_TRI/Release/: makefile
FP_VDI_TRI/Release/src/: aemt.d  funcoesAuxiliares.d  funcoesInicializacao.d  funcoesLeituraDados.d  funcoesSetor.d  subdir.mk
FP_VDI_TRI/Untitled Folder/: Casos em Estudo.txt  barras_m.dad  chaves.dad  chavesCompleto.dad  chaves_amontante.dad  dadosEntrada.dad  dadosTrafo.dad  dados_SE_diferenca_angular.dad  dados_alimentadores.dad  dados_barras_linhas_trafos.dad  linhas.dad  matrizImpedanciaCorrente.dad  noProfundidade-Londrina.dad  parametros.dad  rnpsetores.dad
FP_VDI_TRI/src/: AEMO_DOC_VF.c  aemt.c  aemt.h  data_structures.h  funcoesAuxiliares.c  funcoesAuxiliares.h  funcoesChaveamento.c  funcoesChaveamento.h  funcoesHeuristica.c  funcoesHeuristica.h  funcoesInicializacao.c  funcoesInicializacao.h  funcoesLeituraDados.c  funcoesLeituraDados.h  funcoesProblema.c  funcoesProblema.h  funcoesRNP.c  funcoesRNP.h  funcoesSetor.c  funcoesSetor.h  funcoesTrifasicas.c  funcoesTrifasicas.h  main.c
FP_VDI_TRI/validacao_openDSS/: Legenda_Dados_Entrada.txt  geradorModelo.dss  metodoDireto.py  metodoIndireto.py
FP_VDI_TRI/validacao_openDSS/IEEE_4BUS/: data_branch.csv  data_bus.csv
